--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 </head>
 
 <body>
-    <h1>This is Home Page</h1>
+    <div class="main_body">
+    </div>
 </body>
+<!-- JS FILE -->
+<script src="./js/app.js"></script>
 
 </html>
