Hero area look complete.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
                     </div>
                 </ul>
             </div>
+            <div class="hero_text_container">
+                <h3 class="subtitle">
+                    Elevating Moments
+                </h3>
+                <h1 class="title">
+                    THROUGH RANA’S LENS
+                </h1>
+                <p class="description">
+                    We specialize in photography, video production, fashion, weddings, concerts, portraits & Travel.
+                </p>
+            </div>
         </header>
     </div>
 </body>
