completed 404 not found page

--- a/404.html
+++ b/404.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Through Rana's Lens - Portfolio</title>
-
+    <title>Through Rana's Lens - Page not found</title>
     <!-- CUSTOM CSS FILE -->
-    <link rel="stylesheet" href="./styles/portfolio.css">
-
+    <link rel="stylesheet" href="./styles/404.css">
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet" </head>
+</head>
 
 <body>
 
@@ -87,51 +86,26 @@
                 </div>
                 <div class="overlay"></div>
             </div>
-            <div class="hero_text_container">
-                <h3 class="subtitle">
-                    Elevating Moments
-                </h3>
-                <h1 class="title">
-                    THROUGH RANA’S LENS
-                </h1>
-                <p class="description">
-                    We specialize in photography, video production, fashion, weddings, concerts, portraits & Travel.
-                </p>
+            <div class="error_text_container">
+                <div class="text_area">
+                    <h1 class="subtitle">
+                        404
+                    </h1>
+                    <h2 class="title">
+                        Page Not Found
+                    </h2>
+                    <p class="description">
+                        Its looks like the page that you are looking for is no longer available.
+                    </p>
+                </div>
+                <a href="index.html" class="btn">Go Home</a>
             </div>
         </header>
     </div>
-
-    <div class="filter_links_container">
-        <li class="filter_links active" data-filter="all">All</li>
-        <li class="filter_links" data-filter="wedding">Wedding</li>
-        <li class="filter_links" data-filter="fashion">Fashion</li>
-        <li class="filter_links" data-filter="travelling">Travelling</li>
-        <li class="filter_links" data-filter="portrait">Portrait</li>
-    </div>
-
-    <main class="main">
-        <section class="section gallery">
-            <ul class="images">
-                <li class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg" alt=""></li>
-                <li class="itembox portrait" data-item="wedding"><img src="./assests/images/img2.jpeg" alt=""></li>
-                <li class="itembox wedding" data-item="wedding"><img src="./assests/images/img3.jpeg" alt=""></li>
-                <li class="itembox fashion" data-item="wedding"><img src="./assests/images/img11.jpeg" alt=""></li>
-                <li class="itembox fashion" data-item="portrait"><img src="./assests/images/img2.jpeg" alt=""></li>
-                <li class="itembox portrait" data-item="wedding"><img src="./assests/images/img11.jpeg" alt=""></li>
-                <li class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg" alt=""></li>
-                <li class="itembox travelling" data-item="travelling"><img src="./assests/images/img2.jpeg" alt=""></li>
-            </ul>
-        </section>
-        <section class="section contact_us">
-            <div class="contact_us_container">
-                
-            </div>
-        </section>
-    </main>
+    
 </body>
 
-<!-- JS FILES -->
+<!-- JS FILES  -->
 <script src="./js/nav.js"></script>
-<script src="./js/portfolio.js"></script>
 
 </html>
