updated portfolio page added contact us section

--- a/404.html
+++ b/404.html
@@ -109,8 +109,11 @@
         <div class="site_map">
             <ul class="short_links">
                 <li class="links"><a href="#">Home</a></li>
+                <li class="links">•</li>
                 <li class="links"><a href="#">Portfolio</a></li>
+                <li class="links">•</li>
                 <li class="links"><a href="#">About</a></li>
+                <li class="links">•</li>
                 <li class="links"><a href="#">Contact Us</a></li>
             </ul>
         </div>
