--- a/portfolio.html
+++ b/portfolio.html
@@ -89,8 +89,11 @@
             </div>
             <div class="hero_text_container">
                 <h1 class="title">
-                    THROUGH RANA’S LENS
+                    Unveiling the World
                 </h1>
+                <p class="description">
+                    Where Every Picture Tells a Thousand Stories.
+                </p>
             </div>
         </header>
     </div>
@@ -139,11 +142,12 @@
                         </p>
                     </a>
                 </div>
-                <a href="#" class="btn">Book Us Know <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 20 20">
+                <a href="#" class="btn">
+                    Book Us Know <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                         <path
                             d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z" />
-                    </svg></a>
+                    </svg>
+                </a>
             </div>
             <div class="info_logo_area">
                 <div class="sister_company"></div>
