new chnages global

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     Elevating Moments
                 </h3>
                 <h1 class="title">
-                    THROUGH RANA’S LENS
+                    Through Rana’s Lens
                 </h1>
                 <p class="description">
                     We specialize in photography, video production, fashion, weddings, concerts, portraits & Travel.
