--- a/portfolio.html
+++ b/portfolio.html
@@ -110,14 +110,15 @@
     <main class="main">
         <section class="section gallery">
             <ul class="images">
-                <li class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg" alt=""></li>
-                <li class="itembox portrait" data-item="wedding"><img src="./assests/images/img2.jpeg" alt=""></li>
-                <li class="itembox wedding" data-item="wedding"><img src="./assests/images/img3.jpeg" alt=""></li>
-                <li class="itembox fashion" data-item="wedding"><img src="./assests/images/img11.jpeg" alt=""></li>
-                <li class="itembox fashion" data-item="portrait"><img src="./assests/images/img2.jpeg" alt=""></li>
-                <li class="itembox portrait" data-item="wedding"><img src="./assests/images/img11.jpeg" alt=""></li>
-                <li class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg" alt=""></li>
-                <li class="itembox travelling" data-item="travelling"><img src="./assests/images/img2.jpeg" alt=""></li>
+                <div class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg" alt=""></div>
+                <div class="itembox portrait" data-item="wedding"><img src="./assests/images/img2.jpeg" alt=""></div>
+                <div class="itembox wedding" data-item="wedding"><img src="./assests/images/img3.jpeg" alt=""></div>
+                <div class="itembox fashion" data-item="wedding"><img src="./assests/images/img11.jpeg" alt=""></div>
+                <div class="itembox fashion" data-item="portrait"><img src="./assests/images/img2.jpeg" alt=""></div>
+                <div class="itembox portrait" data-item="wedding"><img src="./assests/images/img11.jpeg" alt=""></div>
+                <div class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg" alt=""></div>
+                <div class="itembox travelling" data-item="travelling"><img src="./assests/images/img2.jpeg" alt="">
+                </div>
             </ul>
         </section>
         <section class="section contact_us">
@@ -147,10 +148,6 @@
                             d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z" />
                     </svg>
                 </a>
-            </div>
-            <div class="info_logo_area">
-                <div class="sister_company"></div>
-                <div class="for_6_years"></div>
             </div>
         </section>
     </main>
