added comments & structured all the codes properly

--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <title>Through Rana's Lens - Page not found</title>
     <!-- CUSTOM CSS FILE -->
     <link rel="stylesheet" href="./styles/404.css">
+
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +19,9 @@
 <body>
 
     <div class="main_body">
+        <!-- ------------------- HERO AREA START -------------------------- -->
         <header class="hero_container">
+            <!-- NAVIGATION AREA START -->
             <div class="navigation_area">
                 <nav class="nav_container">
                     <label class="hamberger">
@@ -86,6 +89,9 @@
                 </div>
                 <div class="overlay"></div>
             </div>
+            <!-- NAVIGATION AREA END -->
+
+            <!-- PAGE CONTENT START -->
             <div class="error_text_container">
                 <div class="text_area">
                     <h1 class="subtitle">
@@ -100,8 +106,12 @@
                 </div>
                 <a href="index.html" class="btn">Go Home</a>
             </div>
+            <!-- PAGE CONTENT END -->
         </header>
+        <!-- ------------------- HERO AREA START -------------------------- -->
     </div>
+
+    <!-- --------------------- FOOTER AREA START ------------------------- -->
     <footer class="footer_area">
         <div class="copyright_text">
             <p>&copy; Through Rana’s Lens | 2023</p>
@@ -141,6 +151,8 @@
             </a>
         </div>
     </footer>
+    <!-- --------------------- FOOTER AREA START ------------------------- -->
+
 </body>
 
 <!-- JS FILES  -->
