--- a/about.html
+++ b/about.html
@@ -18,7 +18,9 @@
 
 <body>
     <div class="main_body">
+        <!-- ----------------- HERO SECTION START ----------------------- -->
         <header class="hero_container">
+            <!-- NAVIGATION AREA START  -->
             <div class="navigation_area">
                 <nav class="nav_container">
                     <label class="hamberger">
@@ -86,14 +88,22 @@
                 </div>
                 <div class="overlay"></div>
             </div>
+            <!-- NAVIGATION AREA ENDS -->
+
+            <!-- MAIN HERO CONTENT START -->
             <div class="hero_text_container">
                 <h1 class="title">
                     Capturing Moments
                 </h1>
             </div>
+            <!-- MAIN HERO CONTENT END  -->
         </header>
+        <!-- ----------------- HERO SECTION START ----------------------- -->
+
+        <!-- ---------------------- MAIN PAGE CONTENT START -------------------- -->
         <main class="main">
-            <section class="section about_us_area">
+            <!-- SECTION ABOUT FOUNDER  -->
+            <section class="section about_us_area" id="founder">
                 <div class="about_text_container">
                     <h4 class="about_subtitle">FOUNDER</h4>
                     <h1 class="about_title">RANA MEDHI</h1>
@@ -116,7 +126,9 @@
                     <img src="./assests/images/img8.jpeg" alt="">
                 </div>
             </section>
-            <section class="section about_us_area">
+
+            <!-- SECTION ABOUT TEAM  -->
+            <section class="section about_us_area" id="team">
                 <div class="about_image_container">
                     <img src="./assests/images/img8.jpeg" alt="">
                 </div>
@@ -138,6 +150,8 @@
                         clients who walks through the door</p>
                 </div>
             </section>
+
+            <!-- SECTION FOR WORK COUNT -->
             <section class="section work_counter">
                 <div class="work work_1" id="fashion">
                     <h1 class="number">100+</h1>
@@ -156,6 +170,8 @@
                     <h4 class="work_info"><i>Fashion photography</i></h4>
                 </div>
             </section>
+
+            <!-- SECTION FOR INSTA SHOWCASE -->
             <section class="section instagram_work_area">
                 <h3 class="section_title">ON INSTAGRAM</h3>
                 <div class="insta_pic_area">
@@ -173,6 +189,8 @@
                     </div>
                 </div>
             </section>
+
+            <!-- SECTION FOR CONTACT  -->
             <section class="section contact_us">
                 <div class="contact_us_area">
                     <h3>
@@ -207,7 +225,10 @@
                 </div>
             </section>
         </main>
+        <!-- ---------------------- MAIN PAGE CONTENT START -------------------- -->
     </div>
+
+    <!-- ------------------------ FOOTER AREA START ------------------------------- -->
     <footer class="footer_area">
         <div class="copyright_text">
             <p>&copy; Through Rana’s Lens | 2023</p>
@@ -247,6 +268,7 @@
             </a>
         </div>
     </footer>
+    <!-- ------------------------ FOOTER AREA END ------------------------------- -->
 </body>
 <!-- JS FILES -->
 <script src="./js/nav.js"></script>
