--- a/portfolio.html
+++ b/portfolio.html
@@ -110,14 +110,22 @@
     <main class="main">
         <section class="section gallery">
             <ul class="images">
-                <div class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg" alt=""></div>
-                <div class="itembox portrait" data-item="wedding"><img src="./assests/images/img2.jpeg" alt=""></div>
-                <div class="itembox wedding" data-item="wedding"><img src="./assests/images/img3.jpeg" alt=""></div>
-                <div class="itembox fashion" data-item="wedding"><img src="./assests/images/img11.jpeg" alt=""></div>
-                <div class="itembox fashion" data-item="portrait"><img src="./assests/images/img2.jpeg" alt=""></div>
-                <div class="itembox portrait" data-item="wedding"><img src="./assests/images/img11.jpeg" alt=""></div>
-                <div class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg" alt=""></div>
-                <div class="itembox travelling" data-item="travelling"><img src="./assests/images/img2.jpeg" alt="">
+                <div class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg"
+                        alt="wedding photography through Rana's Lens"></div>
+                <div class="itembox portrait" data-item="wedding"><img src="./assests/images/img2.jpeg"
+                        alt="wedding photography through Rana's Lens"></div>
+                <div class="itembox wedding" data-item="wedding"><img src="./assests/images/img3.jpeg"
+                        alt="wedding photography through Rana's Lens"></div>
+                <div class="itembox fashion" data-item="wedding"><img src="./assests/images/img11.jpeg"
+                        alt="wedding photography through Rana's Lens"></div>
+                <div class="itembox fashion" data-item="portrait"><img src="./assests/images/img2.jpeg"
+                        alt="wedding photography through Rana's Lens"></div>
+                <div class="itembox portrait" data-item="wedding"><img src="./assests/images/img11.jpeg"
+                        alt="wedding photography through Rana's Lens"></div>
+                <div class="itembox wedding" data-item="wedding"><img src="./assests/images/img4.jpeg"
+                        alt="wedding photography through Rana's Lens"></div>
+                <div class="itembox travelling" data-item="travelling"><img src="./assests/images/img2.jpeg"
+                        alt="wedding photography through Rana's Lens">
                 </div>
             </ul>
         </section>
