--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
         <div class="site_map">
             <ul class="short_links">
                 <li class="links"><a href="#">Home</a></li>
-                <li class="links">•</li>
+                <li class="links dots">•</li>
                 <li class="links"><a href="#">Portfolio</a></li>
-                <li class="links">•</li>
+                <li class="links dots">•</li>
                 <li class="links"><a href="#">About</a></li>
-                <li class="links">•</li>
+                <li class="links dots">•</li>
                 <li class="links"><a href="#">Contact Us</a></li>
             </ul>
         </div>
@@ -267,10 +267,9 @@
                 </svg>
             </a>
             <a href="" class="social_icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    xmlns:v="https://vecta.io/nano">
+                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
                     <path
-                        d="M8 0L4.703.048C3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7L0 8.001l.048 3.297c.04.852.174 1.433.372 1.942a3.93 3.93 0 0 0 .923 1.417c.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372L8 16l3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923 3.93 3.93 0 0 0 .923-1.417c.197-.509.332-1.09.372-1.942L16 8l-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372L7.998 0h.003zm-.717 1.442h.718l3.232.046c.78.035 1.204.166 1.486.275a2.48 2.48 0 0 1 .92.599 2.47 2.47 0 0 1 .598.92c.11.281.24.705.275 1.485l.047 3.231-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919 2.47 2.47 0 0 1-.92.598c-.28.11-.704.24-1.485.276l-3.232.047c-2.136 0-2.39-.009-3.233-.047-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485l-.046-3.233.046-3.231c.036-.78.166-1.204.276-1.486a2.48 2.48 0 0 1 .599-.92 2.47 2.47 0 0 1 .92-.598c.282-.11.705-.24 1.485-.276l2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
+                        d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
                 </svg>
             </a>
         </div>
