made contact page responsive

--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
             <section class="contact_info_area">
                 <h1>Unleash Your Vision</h1>
                 <p>Hey There thaks so much for your interest in our work.We can’t wait to speak with you.
-                    <br>Please fill up this form so that we can get back to you.
+                    Please fill up this form so that we can get back to you.
                 </p>
             </section>
             <section class="contact_form_area">
