about section responsive done ✅

--- a/about.html
+++ b/about.html
@@ -103,71 +103,59 @@
         <!-- ---------------------- MAIN PAGE CONTENT START -------------------- -->
         <main class="main">
             <!-- SECTION ABOUT FOUNDER  -->
-            <section class="section about_us_area" id="founder">
-                <div class="about_text_container">
-                    <h4 class="about_subtitle">FOUNDER</h4>
-                    <h1 class="about_title">RANA MEDHI</h1>
-                    <p class="about_desc">Through Rana's Lens photography and video production company specialize in
-                        fashion, weddings , concerts & portraits.
-                        Our aim is to partner with clients throughout the most meaningful stages of their life and to
-                        capture theses moments for
-                        reflection for years to come.
-
-                        I have founded Through Rana's Lens back in 2017 when I was in school in order to a provide
-                        premium photography service
-                        to artists, models and couples throughout the biggest milestone in their life.
-                        The high quality imagery is paired with a warm and friendly environment that is guaranteed to
-                        the best out of each
-                        person in front of the camera. Together Through Rana's Lens crew offer a top of the range
-                        all-rounded service for every
-                        clients who walks through the door</p>
+            <section class="section about_us_area">
+                <div class="about_founder_container">
+                    <div class="about_founder" id="founder">
+                        <p class="subtitle"><b>Founder</b></p>
+                        <h3>RANA MEDHI</h3>
+                        <p class="desc">I have founded Through Rana's Lens back in 2017 when I was
+                            in school in order to a provide premium photography service
+                            to artists, models and couples throughout the biggest milestone in their life. The high
+                            quality imagery is paired with a
+                            warm and friendly environment that is guaranteed to the best out of each person in front of
+                            the camera. Together Through
+                            Rana's Lens crew offer a top of the range all-rounded service for every clients who walks
+                            through the door</p>
+                    </div>
+                    <div class="img_founder" id="founder_img">
+                        <img class="img" src="./assests/images/founder_img.webp" alt="">
+                    </div>
                 </div>
-                <div class="about_image_container">
-                    <img src="./assests/images/img8.jpeg" alt="">
-                </div>
-            </section>
-
-            <!-- SECTION ABOUT TEAM  -->
-            <section class="section about_us_area" id="team">
-                <div class="about_image_container">
-                    <img src="./assests/images/img8.jpeg" alt="">
-                </div>
-                <div class="about_text_container">
-                    <h1 class="about_title">OUR TEAM</h1>
-                    <p class="about_desc">Through Rana's Lens photography and video production company specialize in
-                        fashion, weddings , concerts & portraits.
-                        Our aim is to partner with clients throughout the most meaningful stages of their life and to
-                        capture theses moments for
-                        reflection for years to come.
-
-                        I have founded Through Rana's Lens back in 2017 when I was in school in order to a provide
-                        premium photography service
-                        to artists, models and couples throughout the biggest milestone in their life.
-                        The high quality imagery is paired with a warm and friendly environment that is guaranteed to
-                        the best out of each
-                        person in front of the camera. Together Through Rana's Lens crew offer a top of the range
-                        all-rounded service for every
-                        clients who walks through the door</p>
+                <div class="about_team_container">
+                    <div class="about_team" id="team">
+                        <h3>OUR TEAM</h3>
+                        <p class="desc">I have founded Through Rana's Lens back in 2017 when I was
+                            in school in order to a provide premium photography service
+                            to artists, models and couples throughout the biggest milestone in their life. The high
+                            quality imagery is paired with a
+                            warm and friendly environment that is guaranteed to the best out of each person in front of
+                            the camera. Together Through
+                            Rana's Lens crew offer a top of the range all-rounded service for every clients who walks
+                            through the door</p>
+                    </div>
+                    <div class="img_team" id="team_img">
+                        <img class="img" src="./assests/images/founder_img.webp" alt="">
+                    </div>
                 </div>
             </section>
 
             <!-- SECTION FOR WORK COUNT -->
             <section class="section work_counter">
                 <div class="work work_1" id="fashion">
-                    <h1 class="number">100+</h1>
+                    <h1 class="number">30+</h1>
                     <h4 class="work_info"><i>Fashion photography</i></h4>
                 </div>
-                <div class="work work_1" id="fashion">
-                    <h1 class="number">100+</h1>
-                    <h4 class="work_info"><i>Fashion photography</i></h4>
+                <div class="work work_2" id="fashion">
+                    <h1 class="number">20+</h1>
+                    <h4 class="work_info"><i>Wedding photography</i></h4>
                 </div>
-                <div class="work work_1" id="fashion">
-                    <h1 class="number">100+</h1>
-                    <h4 class="work_info"><i>Fashion photography</i></h4>
+                <div class="work work_3" id="fashion">
+                    <h1 class="number">80+</h1>
+                    <h4 class="work_info"><i>Travelling photography</i></h4>
                 </div>
-                <div class="work work_1" id="fashion">
-                    <h1 class="number">100+</h1>
-                    <h4 class="work_info"><i>Fashion photography</i></h4>
+                <div class="work work_4" id="fashion">
+                    <h1 class="number">70+</h1>
+                    <h4 class="work_info"><i>Portrait photography</i></h4>
                 </div>
             </section>
 
@@ -253,8 +241,8 @@
                 </svg>
             </a>
             <a href="" class="social_icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook"
-                    viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-facebook" viewBox="0 0 16 16">
                     <path
                         d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                 </svg>
