--- a/portfolio.html
+++ b/portfolio.html
@@ -97,42 +97,65 @@
                 </p>
             </div>
         </header>
-    </div>
 
-    <main class="main">
-        <section class="section gallery">
-
-        </section>
-        <section class="section contact_us">
-            <div class="contact_us_area">
-                <h3>
-                    CONTACT US
-                </h3>
-                <div class="contact_info">
-                    <a href="mailto:medhirana9@gmail.com">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+        <main class="main">
+            <section class="section gallery">
+                <div class="img_container">
+                    <img class="gallery_image" src="./assests/images/concert_1.webp" alt="">
+                    <p class="img_title">Concert</p>
+                </div>
+                <div class="img_container">
+                    <img class="gallery_image" src="./assests/images/concert_1.webp" alt="">
+                    <p class="img_title">Concert</p>
+                </div>
+                <div class="img_container">
+                    <img class="gallery_image" src="./assests/images/concert_1.webp" alt="">
+                    <p class="img_title">Concert</p>
+                </div>
+                <div class="img_container">
+                    <img class="gallery_image" src="./assests/images/concert_1.webp" alt="">
+                    <p class="img_title">Concert</p>
+                </div>
+                <div class="img_container">
+                    <img class="gallery_image" src="./assests/images/concert_1.webp" alt="">
+                    <p class="img_title">Concert</p>
+                </div>
+            </section>
+            <section class="section contact_us">
+                <div class="contact_us_area">
+                    <h3>
+                        CONTACT US
+                    </h3>
+                    <div class="contact_info">
+                        <a href="mailto:medhirana9@gmail.com">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                                <path
+                                    d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
+                            </svg>
+                            <p>medhirana9@gmail.com</p>
+                        </a>
+                        <a href="tel:6003118499">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                                <path
+                                    d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z" />
+                            </svg>
+                            <p>(+91) 600-311-8499</p>
+                        </a>
+                    </div>
+                    <a href="#" class="btn">
+                        Book Us Know <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                             <path
-                                d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
+                                d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z" />
                         </svg>
-                        <p>medhirana9@gmail.com</p>
-                    </a>
-                    <a href="tel:6003118499">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                            <path
-                                d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z" />
-                        </svg>
-                        <p>(+91) 600-311-8499</p>
                     </a>
                 </div>
-                <a href="#" class="btn">
-                    Book Us Know <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                        <path
-                            d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z" />
-                    </svg>
-                </a>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
+        <div class="lightbox_control">
+            <div class="prev_btn"></div>
+            <div class="next_btn"></div>
+        </div>
+    </div>
     <footer class="footer_area">
         <div class="copyright_text">
             <p>&copy; Through Rana’s Lens | 2023</p>
