portfolio made responsive and done with lightbox ✅

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,19 +105,19 @@
                     <p class="img_title">Concert</p>
                 </div>
                 <div class="img_container">
-                    <img class="gallery_image" src="./assests/images/concert_1.webp" alt="">
+                    <img class="gallery_image" src="./assests/images/img1.jpeg" alt="">
                     <p class="img_title">Concert</p>
                 </div>
                 <div class="img_container">
-                    <img class="gallery_image" src="./assests/images/concert_1.webp" alt="">
+                    <img class="gallery_image" src="./assests/images/img10.jpeg" alt="">
                     <p class="img_title">Concert</p>
                 </div>
                 <div class="img_container">
-                    <img class="gallery_image" src="./assests/images/concert_1.webp" alt="">
+                    <img class="gallery_image" src="./assests/images/img12.jpeg" alt="">
                     <p class="img_title">Concert</p>
                 </div>
                 <div class="img_container">
-                    <img class="gallery_image" src="./assests/images/concert_1.webp" alt="">
+                    <img class="gallery_image" src="./assests/images/hero.jpeg" alt="">
                     <p class="img_title">Concert</p>
                 </div>
             </section>
@@ -143,7 +143,7 @@
                         </a>
                     </div>
                     <a href="#" class="btn">
-                        Book Us Know <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                        <p>Book Us Know</p> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                             <path
                                 d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z" />
                         </svg>
@@ -152,8 +152,12 @@
             </section>
         </main>
         <div class="lightbox_control">
-            <div class="prev_btn"></div>
-            <div class="next_btn"></div>
+            <div class="control_btn prev_btn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path fill="#0F172A" d="M18 10C18 10.4142 17.6642 10.75 17.25 10.75L4.6599 10.75L6.76034 12.7004C7.06387 12.9823 7.08145 13.4568 6.79959 13.7603C6.51774 14.0639 6.04319 14.0815 5.73966 13.7996L2.23966 10.5496C2.08684 10.4077 2 10.2086 2 10C2 9.79145 2.08684 9.59232 2.23966 9.45041L5.73966 6.20041C6.0432 5.91856 6.51774 5.93613 6.79959 6.23966C7.08145 6.5432 7.06387 7.01775 6.76034 7.2996L4.6599 9.25L17.25 9.25C17.6642 9.25 18 9.58579 18 10Z" clip-rule="evenodd"/></svg>
+            </div>
+            <div class="control_btn next_btn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path fill="#0F172A" d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z" clip-rule="evenodd"/></svg>
+            </div>
         </div>
     </div>
     <footer class="footer_area">
