Portfolio page  gallery section update

--- a/portfolio.html
+++ b/portfolio.html
@@ -192,6 +192,34 @@
                 alt=""
               />
             </div>
+            <div class="img_container">
+              <img
+                class="gallery_image"
+                src="./assests/images/img4.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="img_container">
+              <img
+                class="gallery_image"
+                src="./assests/images/img10.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="img_container">
+              <img
+                class="gallery_image"
+                src="./assests/images/img6.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="img_container">
+              <img
+                class="gallery_image"
+                src="./assests/images/img9.jpeg"
+                alt=""
+              />
+            </div>
           </div>
         </section>
         <!-- CONTACT US SECTION  -->
